# road-to-dl

./: README.md
Project636/: .effnet_routine.py.swp  .gitignore  effnet_20201111  effnet_routine.py  loader.py  main.py  model.py  network.py  preprocess.py  routines.py  test_routine.py
Project636/model/: eng_test.jit  eng_test.onnx  eng_test.pkl  notes.md  test_model.jit  test_model.onnx  test_model.pkl
ResNet/: DataReader.py  ImageUtils.py  Model.py
ResNet_636/: Network.py  main.py
d2l/: .gitignore  environment.yaml  leNet.py  main.py  quantLeNet.py  quantized_bench.py  routines.py  test.py  visualize.py
d2l/server/: .gitignore  CMakeLists.txt  engine.cpp  engine.h  graph.cpp  graph.h  input_context.cpp  input_context.h  loader.cpp  loader.h  main.cpp  make  mkl.cpp  mkl.h  model.cpp  model.h  node.cpp  node.h  onnx.pb.h  tensor.cpp  tensor.h  test.cpp  test_model.py  utils.h
d2l/server/benchmark/: benchmark.cpp  benchmark.h  main.cpp
d2l/server/test/: engine_test.cpp  engine_test.h  intergration_test.cpp  main.cpp  tensor_test.cpp  tensor_test.h  utils_test.cpp  utils_test.h
d2l/server/test/models/: export.onnx  test_model.py
